--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,15 @@
 name = "ctrader-rs"
 version = "0.1.0"
 edition = "2024"
+readme = "README.md"
+rust-version = "1.92.0"
+license = "Apache Lincense 2.0"
+categories = ["api-bindings", "trading", "forex"]
+description = "An OpenAPI implementation library written in rust."
+keywords = ["ctrader", "forex", "CFDs", "trading", "api", "websocket", "protobuf"]
+documentation = "https://docs.rs/ctrader-rs"
+repository = "https://github.com/cowanweks/ctrader-rs"
+
 
 [lib]
 name = "ctrader_rs"
