(fix) - Add more metadata information

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ version = "0.1.0"
 edition = "2024"
 readme = "README.md"
 rust-version = "1.92.0"
-license = "Apache Lincense 2.0"
+license = "LICENSE"
 categories = ["api-bindings", "trading", "forex"]
 description = "An OpenAPI implementation library written in rust."
 keywords = ["ctrader", "forex", "CFDs", "trading", "api", "websocket", "protobuf"]
