--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ edition = "2024"
 readme = "README.md"
 rust-version = "1.92.0"
 license = "Apache-2.0"
-categories = ["api-bindings", "trading", "forex"]
+categories = ["api-bindings", "finance"]
 description = "An OpenAPI implementation library written in rust."
 keywords = ["ctrader", "forex", "trading", "api", "websocket"]
 documentation = "https://docs.rs/ctrader-rs"
