--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,11 +31,14 @@ path = "src/lib.rs"
 anyhow = "1.0"
 tracing = "0.1.44"
 thiserror = "2.0"
-# async-trait = "0.1"
+async-trait = "0.1"
 serde_json = "1.0.149"
 futures-util = "0.3.31"
 futures-channel = "0.3.31"
 tracing-subscriber = "0.3.22"
+prost = "0.14"
+# Only necessary if using Protobuf well-known types:
+prost-types = "0.14"
 tokio = { version = "1.49.0", features = ["full"] }
 reqwest = { version = "0.13.2", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
@@ -46,10 +49,12 @@ tokio-tungstenite-typed = { version = "0.1.1", features = [
     "json",
     "serde_json",
 ] }
+tonic = "0.14.3"
+quacky = "0.2.20251024"
 
 [dev-dependencies]
 config = "0.15.19"
 
 [build-dependencies]
 anyhow = "1.0"
-protobuf-codegen = { version = "3.7.2", features = [] }
+tonic-prost-build = "0.14.3"
